--- a/CSS/cartStyling.css
+++ b/CSS/cartStyling.css
@@ -56,26 +56,19 @@ main {
 }
 
 #counter {
-    display: flex;
-    justify-content: center;
-    font-size: 1em;
-    margin-top: -40px;
-    margin-right: -900px;
     background-color: white;
     border-radius: 30px;
     width: 1.2em;
-    top:18px;
+    height: 1.2em;
     text-align: center;
     color: #001F3F;
-  
+    margin: 0;
+    margin-left: 3px;
 }
 
 .cartIcon {
     display: flex;
-    margin-right: 50px;
     font-size: 24px;
-    top: 13px;
-  
 }
 
 .userIcon {
@@ -205,6 +198,16 @@ a {
         flex-wrap: wrap;
         margin-top: 12px;
  
+    }
+    #cartProducts {
+        display: inline;
+    }
+    .productBox {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    #checkBox {
+        height: 10vh;
     }
 
 }
