--- a/CSS/mypagesStyling.css
+++ b/CSS/mypagesStyling.css
@@ -8,11 +8,9 @@
 
 body {
     display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
-    flex-wrap: wrap;
-    
 }
 
 .topnav {
@@ -38,14 +36,12 @@ body {
 .userIcon {
     margin-right: 10px;
     font-size: 25px;
-    margin-top: 2px;
-    display: flex;
-   
 }
 
 .myPages {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    padding-right: 5px;
 }
 
 #signOut {
@@ -60,10 +56,7 @@ body {
 
 #authentication {
     display: flex;
-    justify-content: center;
     align-items: center;
-    top: 10px;
-    flex-wrap: wrap;
 }
 
 a {
@@ -75,13 +68,13 @@ a {
 
 main {
     display: flex;
-    justify-content: space-between;
-    width: auto;
-    flex-wrap: wrap;
+    justify-content: center;
+    /* width: auto;
+    flex-wrap: wrap; */
     text-align: center;
     flex: 1;
     background: #001F3F;
-    box-shadow: rgb(94, 96, 97) 100px 2px 20px 10px inset;
+    box-shadow: rgb(94, 96, 97) 100px 2px 200px 10px inset;
     margin: 0 auto;
     padding: 0 1.5em;
     padding-top: 95px;
@@ -96,7 +89,6 @@ p {
 }
 
 #ordersContainer {
-    width: 100vw;
     height: 20%;
     padding-left: 8em;
 }
@@ -123,13 +115,14 @@ h1 {
 }
 
 .orderBox {
-    width: 100vw;
     margin-bottom: 10px;
 }
 
 .generalInfo {
     background-color: whitesmoke;
-    margin-bottom: 3em;
+    margin-bottom: 2em;
+    padding: 10px;
+    color: black;
 }
 
 @media screen and (max-width: 700px) and (min-width:400px) {
@@ -160,6 +153,9 @@ h1 {
 }
 
 @media screen and (max-width: 400px) {
+    body {
+        height: 100%;
+    }
     main {
         box-shadow: 0px 0px 20px 10px rgb(139, 161, 182) inset;
     }
@@ -173,7 +169,7 @@ h1 {
         padding-right: 2em;
     }
     #ordersContainer {
-        padding: 30px;
+        padding: 10px;
     }
     h1 {
         font-size: 20px;
