--- a/CSS/cartStyling.css
+++ b/CSS/cartStyling.css
@@ -15,16 +15,15 @@ body {
 }
 
 main {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: auto;
     flex-wrap: wrap;
     text-align: center;
     flex: 1;
     background: #001F3F;
     box-shadow: rgb(94, 96, 97) 100px 2px 20px 10px inset;
-    margin: 0 auto;
     padding: 0 1.5em;
     padding-top: 95px;
     padding-bottom: 20px;
@@ -113,10 +112,10 @@ a {
 }
 
 #cartProducts {
-    width: 100vw;
+    width: 90vw;
     margin: 10px;
     display: flex;
-    text-align: center;
+    flex-wrap: wrap;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -135,8 +134,7 @@ a {
 }
 
 #checkBox {
-    width: 100vw;
-    height: 30vh;
+    height: 10vh;
     text-align: start;
     padding-left: 8em;
 }
@@ -185,6 +183,18 @@ a {
         flex-wrap: wrap;
         margin-top: 12px;
  
+    }
+    main {
+        min-height: 100vh;
+    }
+    .totalText {
+        padding-left: 0;
+    }
+    #signOut {
+        padding: 1px 5px;
+    }
+    .userIcon {
+        margin-right: 0;
     }
 }
 @media only screen and (max-width: 900px) {
